--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -87,7 +87,7 @@
 .about p{
     text-align: justify;
 }
-h3{
+.profile h3 {
     font-size: 20px;
     margin-bottom: 15px;
 }
@@ -106,6 +106,7 @@ h3{
     margin-bottom: -250px;
 }
 .projects .heading{
+
     margin-bottom: 35px;
 }
 .card{
@@ -115,7 +116,8 @@ h3{
 }
 .card img{
     height: 300px;
-    object-fit: fill;
+    object-fit: cover;
+    object-position: 10% 20%;
 }
 /* end of projects */
 /* contact */
@@ -145,17 +147,16 @@ footer{
     color: #ececec;
     padding: 50px 0px;
 }
-footer p{
+footer h3 {
+    margin-bottom: 30px;
+}
+
+footer a {
     margin-bottom: 20px;
     font-size: 15px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 1px;
     line-height: 1px;
-}
-footer h3{
-    margin-bottom: 30px;
-}
-footer a{
     text-decoration: none;
     color: inherit;
 }
